Nutch Change Log

(trunk) Current Development:

* NUTCH-1352 Improve regex urlfilters/normalizers synchronization (ferdy via markus)

* NUTCH-1024 Dynamically set fetchInterval by MIME-type (markus)

* NUTCH-1364 Add a counter in Generator for malformed urls (lewismc)

* NUTCH-1360 Suport the storing of IP address connected to when web crawling (lewismc)

* NUTCH-1262 Map `duplicating` content-types to a single type (markus)

* NUTCH-1384 Typo in ParseSegments's run-method (Matthias Agethle via markus)

* NUTCH-1385 More robust plug-in order properties in nutch-site.xml (Andy Xue via markus)

* NUTCH-1336 Optionally not index db_notmodified pages (markus)

* NUTCH-1346 Follow outlinks to ignore external (markus)

* NUTCH-1320 IndexChecker and ParseChecker choke on IDN's (markus)

* NUTCH-1351 DomainStatistics to aggregate by TLD (markus)

* NUTCH-1381 Allow to override default subcollection field name (markus)

* NUTCH-XX Commit to add configuration for separation of ant distribution targets (lewismc + jnioche)

Release 1.5 - 04/15/2012

* NUTCH-1208 Don't include KEYS file in bin distribution (jnioche)

* NUTCH-1234 Upgrade to Tika 1.1 (jnioche, markus)

* NUTCH-809 Parse-metatags plugin (jnioche)

* NUTCH-1310 Nutch to send HTTP-accept header (markus)

* NUTCH-1305 Domain(blacklist)URLFilter to trim entries (markus)

* NUTCH-1307 Improve formatting of ant targets for clearer project help (lewismc)

* NUTCH-1299 LinkRank inverter to ignore records without Node (markus)

* NUTCH-1258 MoreIndexingFilter should be able to read Content-Type from both parse metadata and content metadata (jnioche, markus)

* NUTCH-1293 IndexingFiltersChecker to store detected content type in crawldatum metadata (markus)

* NUTCH-1291 Fetcher to stringify exception on // unexpected exception (markus)

* NUTCH-965 Skip parsing for truncated documents (alexis, lewismc, ferdy)

* NUTCH-1210 DomainBlacklistFilter (markus)
