@@ -62,6 +62,8 @@
 		<dependency org="xerces" name="xercesImpl" rev="2.9.1" />
 		<dependency org="xerces" name="xmlParserAPIs" rev="2.6.2" />
 		<dependency org="oro" name="oro" rev="2.0.8" />
+		
+		<dependency org="com.google.guava" name="guava" rev="11.0.2" />
 
 		<!--Configuration: test -->
 
